# fmm-bench

./: .gitignore  Cargo.toml  README.md  corpus.json  justfile  quick-validate.sh  run-baseline.sh  run-experiment.sh  run-hint-full.sh  run-issue.sh
harness/: analyze.js  parse-trace.js
repos/clean/: package-lock.json
repos/inline/: package-lock.json  package.json
repos/inline/src/: index.ts
repos/test-auth-app/: package-lock.json  tsconfig.json
research/: exp14-quick-validate.md  exp15-kysely-issue.md
research/exp14/: FINDINGS.md
results/baseline/: 20260129_175936_clean_raw.jsonl  20260129_175936_clean_trace.json  20260129_180019_clean_raw.jsonl  20260129_180019_clean_trace.json  20260129_180057_clean_raw.jsonl  20260129_180057_clean_trace.json  20260129_180130_inline_raw.jsonl  20260129_180130_inline_trace.json  20260129_180201_inline_raw.jsonl  20260129_180201_inline_trace.json  20260129_180241_inline_raw.jsonl  20260129_180241_inline_trace.json  20260129_180309_manifest_raw.jsonl  20260129_180309_manifest_trace.json  20260129_180354_manifest_raw.jsonl  20260129_180354_manifest_trace.json  20260129_180431_manifest_raw.jsonl  20260129_180431_manifest_trace.json
results/hint-full/: 20260129_180859_manifest_hintfull_raw.jsonl  20260129_180859_manifest_hintfull_trace.json  20260129_180916_manifest_hintfull_raw.jsonl  20260129_180916_manifest_hintfull_trace.json  20260129_180932_manifest_hintfull_raw.jsonl  (+1 more)
src/: aggregate.rs  batch.rs  cache.rs  evaluator.rs  issue.rs  lib.rs  main.rs  metrics.rs  orchestrator.rs  report.rs  runner.rs  sandbox.rs  tasks.rs
(+85 files in other folders)
