[package]
name = "fmm-bench"
version = "0.1.0"
edition = "2021"
authors = ["Stuart Robinson <stuart@alphabio.com>"]
description = "A/B comparison harness for benchmarking FMM-assisted vs unassisted Claude performance"
license = "MIT"
repository = "https://github.com/srobinson/fmm-bench"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.14"

[[bin]]
name = "fmm-bench"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
